fix some bugs & add check remote